<resources>
    <string name="app_name">Final_Project</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="snackbar_text">VOLS SABER QUÈ PASSA? Així ens ho explica el nostre amic iPhone</string>
    <string name="snackbar_action">GO!</string>
    <string name="LogIn">LOG IN</string>
    <string name="UserName">Username:</string>
    <string name="Password">Password:</string>
    <string name="Pass_forget">Forgotten password?</string>
    <string name="SignUp">SIGN UP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
